--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -21,7 +21,7 @@
             font:name = "Avenir_Heavy"
             android:id="@+id/textLabel"
             android:text="Label"
-            android:textColor="@color/blu3"
+            android:textColor="@color/colorSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
