--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:font="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/tools"
-    android:background="@color/navigationDrawerBackgroundDetail">
+    android:background="@color/colorSecondaryBackground">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,7 +27,7 @@
 
                 <ImageView
                     android:src="@drawable/flag_white"
-                    android:tint="@color/red"
+                    android:tint="@color/black"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
@@ -51,7 +51,7 @@
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_MEDIUM"
-                    android:textColor="@color/red"
+                    android:textColor="@color/black"
                     android:text="BBS"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -87,7 +87,7 @@
 
                 <ImageView
                     android:src="@drawable/ic_email_2"
-                    android:tint="@color/red"
+                    android:tint="@color/black"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
@@ -111,7 +111,7 @@
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_MEDIUM"
-                    android:textColor="@color/red"
+                    android:textColor="@color/black"
                     android:text="PERSURATAN"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -148,7 +148,7 @@
 
                 <ImageView
                     android:src="@drawable/document_black"
-                    android:tint="@color/red"
+                    android:tint="@color/black"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
@@ -172,7 +172,7 @@
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_MEDIUM"
-                    android:textColor="@color/red"
+                    android:textColor="@color/black"
                     android:text="DISPOSISI"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
