--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -53,7 +53,7 @@
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_40"
-                android:background="@color/grey_s"
+                android:background="@color/colorListItem"
                 android:layout_below="@+id/text_Date"
                 android:layout_marginLeft="@dimen/space_5"
                 android:layout_marginTop="@dimen/space_5"
