--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
    -->
 
     <style name="ToolbarColoredBackArrow" parent="AppTheme">
-        <item name="android:textColorSecondary">@color/blu3</item>
+        <item name="android:textColorSecondary">@color/colorSearch</item>
     </style>
 
     <style name="AppBaseTheme" parent="android:Theme.Light">
