--- a/app/src/main/res/layout/fragment_bbs.xml
+++ b/app/src/main/res/layout/fragment_bbs.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/btn_shape_all_blue"
             android:layout_width="match_parent"
             android:layout_height="@dimen/space_45"
+            android:textColorHint="@color/white"
             android:hint="search" />
 
         <RelativeLayout
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="BBS"
-                android:textColor="@color/red"
+                android:textColor="@color/black"
                 android:textSize="@dimen/space_12"
                 font:name="GOTHAM_BOLD"
                 font:type = "bold"
@@ -59,7 +60,7 @@
                 android:background="@color/white"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/red"
+                app:tabIndicatorColor="@color/black"
                 app:tabIndicatorHeight="3dp"
                 app:tabMode="fixed"
                 app:tabPaddingBottom="-1dp"
@@ -67,7 +68,7 @@
                 app:tabPaddingStart="-1dp"
                 app:tabPaddingTop="-1dp"
                 font:name="GOTHAM_BOLD"
-                font:tabTextColor="@color/red"
+                font:tabTextColor="@color/black"
                 android:elevation="2dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
@@ -82,7 +83,7 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:tint="@color/red"
+                android:tint="@color/black"
                 android:layout_marginLeft="@dimen/space_5" />
         </RelativeLayout>
 
