--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -99,6 +99,7 @@
                     android:layout_marginBottom="@dimen/space_5" />
 
                 <ImageView
+                    android:visibility="gone"
                     android:layout_width="@dimen/space_40"
                     android:layout_height="@dimen/space_40"
                     android:id="@+id/imageView15"
