--- a/app/src/main/res/layout/activity_disposisi_detail.xml
+++ b/app/src/main/res/layout/activity_disposisi_detail.xml
@@ -31,14 +31,14 @@
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:tabGravity="fill"
-            app:tabIndicatorColor="@color/blue2"
+            app:tabIndicatorColor="@color/colorSelectButton"
             app:tabIndicatorHeight="3dp"
             app:tabMode="fixed"
             app:tabPaddingBottom="-1dp"
             app:tabPaddingEnd="-1dp"
             app:tabPaddingStart="-1dp"
             app:tabPaddingTop="-1dp"
-            font:tabTextColor="@color/blue2"
+            font:tabTextColor="@color/colorSelectButton"
             android:elevation="2dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
