--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,49 +43,75 @@
             android:layout_alignStart="@+id/btn_login"
             android:textStyle="italic" />
 
-        <ui.CustomEditText
-            font:name="Label"
-            font:type = "bold"
-            android:drawableLeft="@drawable/gns_user"
-            android:textColor="@color/black"
-            android:textSize="@dimen/space_14"
-            android:id="@+id/edt_username"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@drawable/edittext_shape"
+            android:id="@+id/layout_edt_username"
+            android:drawableLeft="@drawable/gns_user"
+            android:background="@drawable/btn_shape_login"
             android:clickable="false"
             android:ems="10"
             android:paddingLeft="10dp"
             android:singleLine="true"
             android:hint="Username"
             android:layout_below="@+id/circleView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/space_20"
             android:layout_marginRight="@dimen/space_30"
-            android:layout_marginLeft="@dimen/space_30" />
+            android:layout_marginLeft="@dimen/space_30">
 
-        <ui.CustomEditText
-            font:name="Label"
-            font:type = "bold"
-            android:textSize="@dimen/space_14"
-            android:drawableLeft="@drawable/gns_lock"
-            android:textColor="@color/black"
-            android:id="@+id/edt_password"
+            <ImageView
+                android:src="@drawable/gns_user"
+                android:layout_width="@dimen/space_40"
+                android:layout_height="match_parent"
+                android:layout_marginTop="-2dp"
+                android:layout_marginBottom="-2dp" />
+            <ui.CustomEditText
+                android:id="@+id/edt_username"
+                android:singleLine="true"
+                android:background="@color/transparant_pure"
+                android:textColorHint="@color/grey"
+                android:textSize="@dimen/space_14"
+                android:textColor="@color/black"
+                android:hint="Username"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/space_35" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_below="@+id/edt_username"
-            android:background="@drawable/edittext_shape"
+            android:id="@+id/layout_edt_password"
+            android:drawableLeft="@drawable/gns_user"
+            android:background="@drawable/btn_shape_login"
+            android:clickable="false"
             android:ems="10"
-            android:hint="Password"
             android:paddingLeft="10dp"
-            android:password="true"
             android:singleLine="true"
+            android:layout_below="@+id/layout_edt_username"
             android:layout_marginTop="@dimen/space_10"
-            android:layout_alignRight="@+id/edt_username"
-            android:layout_alignEnd="@+id/edt_username"
-            android:layout_alignLeft="@+id/edt_username"
-            android:layout_alignStart="@+id/edt_username" />
+            android:layout_marginLeft="@dimen/space_30"
+            android:layout_marginRight="@dimen/space_30">
+            <ImageView
+                android:src="@drawable/gns_lock"
+                android:layout_width="@dimen/space_40"
+                android:layout_height="@dimen/space_40"
+                android:layout_marginBottom="-2dp"
+                android:layout_marginTop="-2dp" />
+            <ui.CustomEditText
+                android:id="@+id/edt_password"
+                android:singleLine="true"
+                android:background="@color/transparant_pure"
+                android:textColorHint="@color/grey"
+                android:textSize="@dimen/space_14"
+                android:textColor="@color/black"
+                android:hint="Password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/space_35" />
+
+            </RelativeLayout>
+
 
         <ui.CustomButton
             font:name="Label"
@@ -97,11 +123,11 @@
             android:textAllCaps="false"
             android:text="LOGIN"
             android:textColor="@color/white"
-            android:layout_below="@+id/edt_password"
-            android:layout_alignLeft="@+id/edt_password"
-            android:layout_alignStart="@+id/edt_password"
-            android:layout_alignRight="@+id/edt_password"
-            android:layout_alignEnd="@+id/edt_password"
+            android:layout_below="@+id/layout_edt_password"
+            android:layout_alignLeft="@+id/layout_edt_password"
+            android:layout_alignStart="@+id/layout_edt_password"
+            android:layout_alignRight="@+id/layout_edt_password"
+            android:layout_alignEnd="@+id/layout_edt_password"
             android:layout_marginTop="@dimen/space_10" />
 
 
