--- a/app/src/main/res/layout/fragment_bbs.xml
+++ b/app/src/main/res/layout/fragment_bbs.xml
@@ -15,15 +15,32 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/space_5">
 
-        <ui.CustomEditText
-            android:id="@+id/text_search"
+        <RelativeLayout
             android:textColor="@color/white"
-            android:drawableRight="@drawable/ic_search_white_32"
             android:background="@drawable/btn_shape_all_blue"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_45"
-            android:textColorHint="@color/white"
-            android:hint="search" />
+            android:layout_height="@dimen/space_45">
+
+            <ui.CustomEditText
+                android:id="@+id/text_search"
+                android:textColor="@color/white"
+                android:background="@color/transparant_pure"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_45"
+                android:textColorHint="@color/white"
+                android:hint="search"
+                android:layout_marginRight="@dimen/space_35"
+                android:layout_marginLeft="@dimen/space_5" />
+
+            <ImageView
+                android:src="@drawable/ic_search_white_32"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_25"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="@dimen/space_5" />
+        </RelativeLayout>
 
         <RelativeLayout
             android:background="@color/white"
