--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -116,27 +116,48 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_40"
+                android:layout_height="@dimen/space_35"
                 android:layout_marginTop="@dimen/space_5">
 
-                <ui.CustomtextView
+                <RelativeLayout
                     android:drawableLeft="@drawable/download24"
                     android:id="@+id/btnDownload"
-                    android:layout_width="wrap_content"
+                    android:layout_width="115dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/btn_shape_all_blue"
+
                     android:gravity="center"
                     android:onClick="onClick"
-                    android:text="lihat dokumen"
+                    android:text="  lihat dokumen  "
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_12"
-                    font:name="GOTHAM_BLACK"
-
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginBottom="@dimen/space_5"
-                    android:layout_marginRight="@dimen/space_10" />
+                    android:layout_marginRight="@dimen/space_10" >
+                    <ImageView
+                        android:src="@drawable/downloadsave32"
+                        android:layout_width="@dimen/space_25"
+                        android:layout_height="@dimen/space_25"
+                        android:layout_marginRight="@dimen/space_3" />
+
+                    <ui.CustomtextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:onClick="onClick"
+                        android:text="lihat dokumen"
+                        android:textColor="#ffffff"
+                        android:textSize="@dimen/space_10"
+                        font:name="GOTHAM_BLACK"
+
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
+
+
             </RelativeLayout>
 
         </LinearLayout>
