--- a/app/src/main/res/layout/row_disposisi_riwayat_dalamproses.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat_dalamproses.xml
@@ -79,24 +79,42 @@
 
             </RelativeLayout>
 
-            <ui.CustomtextView
+            <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:layout_width="wrap_content"
+                android:layout_width="115dp"
                 android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_all_blue"
                 android:gravity="center"
                 android:onClick="onClick"
-                android:text="lihat dokumen"
+                android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
-                android:textSize="@dimen/space_14"
-                font:name = "GOTHAM_BLACK"
-                android:layout_weight="1"
-                android:layout_below="@+id/layout_attachment"
-                android:layout_alignRight="@+id/text_time"
-                android:layout_alignEnd="@+id/text_time"
-                android:layout_marginRight="@dimen/space_5"
-                android:layout_marginTop="@dimen/space_3" />
+                android:textSize="@dimen/space_12"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="@dimen/space_5"
+                android:layout_marginRight="@dimen/space_10" >
+                <ImageView
+                    android:src="@drawable/downloadsave32"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_30" />
+
+                <ui.CustomtextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:onClick="onClick"
+                    android:text="lihat dokumen"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/space_10"
+                    font:name="GOTHAM_BLACK"
+
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
