--- a/app/src/main/res/layout/fragment_bbs_daftarpesanan.xml
+++ b/app/src/main/res/layout/fragment_bbs_daftarpesanan.xml
@@ -58,32 +58,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="@dimen/space_160"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/linearLayout2"
-                    android:layout_toLeftOf="@+id/imageView12"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true">
-
-                    <ui.CustomButton
-                        font:name = "GOTHAM_BOLD"
-                        android:textSize="@dimen/space_10"
-                        android:drawableLeft="@drawable/upload"
-                        android:id="@+id/btn_lampiran"
-                        android:background="@drawable/btn_shape_all_transparant_blue"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/space_40"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="@dimen/space_5"
-                        android:text="Lampirkan File"
-                        android:drawableTint="@drawable/upload"
-                        android:layout_marginRight="@dimen/space_10"
-                        android:layout_marginTop="@dimen/space_5"
-                        android:layout_marginBottom="@dimen/space_5" />
-                </LinearLayout>
-
                 <ImageView
                     android:layout_width="@dimen/space_35"
                     android:layout_height="@dimen/space_35"
@@ -103,6 +77,50 @@
                     android:layout_toLeftOf="@+id/imageView11"
                     android:layout_toStartOf="@+id/imageView11"
                     android:layout_marginRight="@dimen/space_5" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="@dimen/space_160"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout2"
+                    android:layout_alignParentTop="true"
+                    android:layout_toLeftOf="@+id/imageView12"
+                    android:layout_toStartOf="@+id/imageView12">
+
+                    <RelativeLayout
+                        android:textSize="@dimen/space_10"
+                        android:drawableLeft="@drawable/upload"
+                        android:id="@+id/layout_btn_lampiran"
+                        android:background="@drawable/btn_shape_all_transparant_blue"
+                        android:layout_width="@dimen/space_150"
+                        android:layout_height="@dimen/space_40"
+                        android:layout_weight="0.05"
+                        android:layout_marginLeft="@dimen/space_5"
+                        android:text="Lampirkan File"
+                        android:layout_marginRight="@dimen/space_10"
+                        android:layout_marginTop="@dimen/space_5"
+                        android:layout_marginBottom="@dimen/space_5">
+
+                        <ImageView
+                            android:src="@drawable/upload"
+                            android:layout_width="@dimen/space_25"
+                            android:layout_height="@dimen/space_25"
+                            android:layout_marginLeft="@dimen/space_5" />
+
+                        <ui.CustomtextView
+                            font:name = "GOTHAM_BOLD"
+                            android:textSize="@dimen/space_10"
+                            android:id="@+id/btn_lampiran"
+                            android:background="@color/transparant_pure"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/space_40"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="@dimen/space_40"
+                            android:text="Lampirkan File"
+                            android:gravity="fill_vertical" />
+
+                    </RelativeLayout>
+                </LinearLayout>
             </RelativeLayout>
 
         </RelativeLayout>
