--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -26,7 +26,7 @@
                 android:layout_height="@dimen/space_40">
 
                 <ImageView
-                    android:src="@drawable/flag_white"
+                    android:src="@drawable/flag_grey"
                     android:tint="@color/black"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="match_parent"
@@ -39,7 +39,7 @@
 
                 <ImageView
                     android:id="@+id/imgplus_bbs"
-                    android:tint="@color/blu3"
+                    android:tint="@color/colorSearch"
                     android:src="@drawable/plus"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
 
                 <ImageView
                     android:id="@+id/imgplus_persuratan"
-                    android:tint="@color/blu3"
+                    android:tint="@color/colorSearch"
                     android:src="@drawable/plus"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="wrap_content"
@@ -160,7 +160,7 @@
 
                 <ImageView
                     android:id="@+id/imgplus_disposisi"
-                    android:tint="@color/blu3"
+                    android:tint="@color/colorSearch"
                     android:src="@drawable/plus"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="wrap_content"
@@ -196,14 +196,14 @@
                     android:layout_height="@dimen/space_40"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     app:tabGravity="fill"
-                    app:tabIndicatorColor="@color/red"
+                    app:tabIndicatorColor="@color/black"
                     app:tabIndicatorHeight="3dp"
                     app:tabMode="fixed"
                     app:tabPaddingBottom="-1dp"
                     app:tabPaddingEnd="-1dp"
                     app:tabPaddingStart="-1dp"
                     app:tabPaddingTop="-1dp"
-                    font:tabTextColor="@color/red"
+                    font:tabTextColor="@color/black"
                     android:elevation="2dp"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
