--- a/app/src/main/res/drawable/btn_shape_all_grey.xml
+++ b/app/src/main/res/drawable/btn_shape_all_grey.xml
@@ -10,8 +10,6 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <corners android:radius="15dp"
-    android:topRightRadius="15dip"
-    android:topLeftRadius="15dip"/>
+    <corners android:radius="25dp" />
 
 </shape>
