--- a/app/src/main/res/drawable/btn_shape_facebook.xml
+++ b/app/src/main/res/drawable/btn_shape_facebook.xml
@@ -10,8 +10,6 @@
         android:left="6dp"
         android:right="6dp"
         android:top="6dp" />
-    <corners android:radius="15dp"
-        android:topRightRadius="15dip"
-        android:topLeftRadius="15dip"/>
+    <corners android:radius="25dp"/>
 
 </shape>
