--- a/app/src/main/res/layout/row_disposisi_permohonan.xml
+++ b/app/src/main/res/layout/row_disposisi_permohonan.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:font="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -14,36 +16,45 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/space_100">
+        android:layout_height="118dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4">
+            android:layout_height="wrap_content">
 
             <ui.CustomtextView
+                font:name = "GOTHAM_BOLD"
+                android:textSize="@dimen/space_12"
                 android:id="@+id/text_Date"
+
                 android:text="Senin,19 sept 2016"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/space_5" />
+                android:layout_marginLeft="@dimen/space_5"
+                android:layout_marginTop="@dimen/space_2" />
 
             <ui.CustomtextView
-                font:name = "Label"
+                font:name = "GOTHAM_BOLD"
+                android:textSize="@dimen/space_12"
                 android:id="@+id/text_time"
                 android:text="10:46 AM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:layout_alignTop="@+id/text_judul_surat"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="@dimen/space_5" />
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/space_2" />
 
             <RelativeLayout
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_40"
+                android:layout_height="wrap_content"
                 android:background="@color/colorListItem"
                 android:layout_below="@+id/text_Date"
                 android:layout_alignRight="@+id/text_time"
@@ -53,66 +64,149 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="Label"
+                    font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_3"
-                    android:layout_marginLeft="@dimen/space_5"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:layout_alignTop="@+id/imageView6"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45" />
 
                 <ui.CustomtextView
-                    font:name="Avenir_LightOblique"
+                    font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
+                    android:maxLines="1"
+                    android:layout_alignBottom="@+id/imageView6"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45"
+                    android:textStyle="italic" />
+
+                <ImageView
+                    android:layout_width="@dimen/space_40"
+                    android:layout_height="@dimen/space_40"
+                    android:id="@+id/imageView6"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:textStyle="italic"
-                    android:maxLines="1"
-                    android:layout_marginLeft="@dimen/space_5"/>
+                    android:src="@drawable/pdf"
+                    android:layout_marginTop="@dimen/space_5"
+                    android:layout_marginBottom="@dimen/space_5" />
+
+                <ImageView
+                    android:visibility="gone"
+                    android:layout_width="@dimen/space_35"
+                    android:layout_height="@dimen/space_35"
+                    android:id="@+id/imageView15"
+                    android:layout_alignTop="@+id/lbl_attach"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/circle_kosong"
+                    android:layout_marginRight="@dimen/space_5" />
 
 
             </RelativeLayout>
 
-            <ui.CustomtextView
-                android:id="@+id/btnDownload"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/space_25"
-                android:background="@drawable/btn_shape"
-                android:gravity="center"
-                android:onClick="onClick"
-                android:text="DOWNLOAD"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/space_12"
-                font:name="Label"
-                android:layout_weight="1"
-                android:layout_below="@+id/layout_attachment"
-                android:layout_toLeftOf="@+id/text_time"
-                android:layout_toStartOf="@+id/text_time" />
+            <ImageView
+                android:layout_width="@dimen/space_20"
+                android:layout_height="@dimen/space_20"
+                android:id="@+id/imageView4"
+                android:src="@drawable/gns_clock"
+                android:layout_toStartOf="@+id/text_time"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/text_time" />
 
-            <ui.CustomtextView
+            <ImageView
+                android:layout_width="@dimen/space_40"
+                android:layout_height="@dimen/space_30"
+                android:id="@+id/imageView5"
+                android:src="@drawable/circle_cc"
+                android:layout_toLeftOf="@+id/btnPrint"
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_alignBottom="@+id/btnPrint"
+                android:layout_alignTop="@+id/btnPrint" />
+
+            <RelativeLayout
                 android:id="@+id/btnPrint"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/space_25"
+                android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_facebook"
-                android:gravity="center"
                 android:onClick="onClick"
-                android:text="PRINT"
+                android:text="lihat detail"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
-                font:name="Label"
-                android:layout_weight="1"
+                android:layout_alignTop="@+id/btnDownload"
+                android:layout_toLeftOf="@+id/btnDownload"
+                android:layout_toStartOf="@+id/btnDownload"
+                android:layout_width="105dp"
+                android:layout_marginRight="@dimen/space_3"
+                android:layout_alignBottom="@+id/btnDownload">
+                <ImageView
+                    android:src="@drawable/info_32"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25" />
+
+                <ui.CustomtextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:onClick="onClick"
+                    android:text="lihat detail"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/space_10"
+                    font:name="GOTHAM_BLACK"
+
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="fill_vertical"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/space_30" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:drawableLeft="@drawable/download24"
+                android:id="@+id/btnDownload"
+                android:background="@drawable/btn_shape_all_blue"
+                android:onClick="onClick"
+                android:text="  lihat dokumen  "
+                android:textColor="#ffffff"
+                android:textSize="@dimen/space_12"
+                android:layout_width="120dp"
+                android:layout_height="@dimen/space_30"
                 android:layout_below="@+id/layout_attachment"
-                android:layout_alignRight="@+id/text_time"
-                android:layout_alignEnd="@+id/text_time"
-                android:layout_marginRight="@dimen/space_5" />
+                android:layout_marginTop="@dimen/space_3"
+                android:layout_alignRight="@+id/layout_attachment"
+                android:layout_alignEnd="@+id/layout_attachment">
+                <ImageView
+                    android:src="@drawable/downloadsave32"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
+                    android:layout_marginRight="@dimen/space_3" />
+
+                <ui.CustomtextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:onClick="onClick"
+                    android:text="  lihat dokumen"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/space_10"
+                    font:name="GOTHAM_BLACK"
+
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
 
         </RelativeLayout>
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
