--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -178,12 +178,12 @@
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
-                android:layout_width="120dp"
                 android:layout_height="@dimen/space_30"
                 android:layout_below="@+id/layout_attachment"
                 android:layout_marginTop="@dimen/space_3"
                 android:layout_alignRight="@+id/layout_attachment"
-                android:layout_alignEnd="@+id/layout_attachment">
+                android:layout_alignEnd="@+id/layout_attachment"
+                android:layout_width="103dp">
                 <ImageView
                     android:src="@drawable/downloadsave32"
                     android:layout_width="@dimen/space_25"
@@ -195,14 +195,18 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="onClick"
-                    android:text="  lihat dokumen"
+                    android:text="lihat surat"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_toEndOf="@+id/imageView16"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/space_20" />
             </RelativeLayout>
 
         </RelativeLayout>
