--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -18,7 +18,7 @@
         android:layout_below="@+id/tool_bar">
 
         <ui.CustomtextView
-            font:name = "Avenir_Heavy"
+            font:name = "GOTHAM_MEDIUM"
             android:id="@+id/textLabel"
             android:text="Label"
             android:textColor="@color/colorSearch"
