--- a/app/src/main/res/layout/item_row_header_expandable.xml
+++ b/app/src/main/res/layout/item_row_header_expandable.xml
@@ -1,51 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:font="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_nav_menu_container"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/space_30"
+    android:layout_height="wrap_content"
     android:background="@drawable/shape_nav_menu_selector"
+    android:orientation="horizontal"
     android:paddingLeft="@dimen/space_10"
     android:paddingRight="@dimen/space_10">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/space_50">
+        android:layout_height="@dimen/space_20"
+        android:layout_marginBottom="@dimen/space_30"
+        android:layout_marginTop="@dimen/space_10">
+
         <ImageView
             android:id="@+id/item_nav_menu_icon_image_view"
-            android:layout_width="@dimen/space_25"
-            android:layout_height="@dimen/space_25"
-            android:gravity="fill_horizontal"
+            android:layout_width="@dimen/space_18"
+            android:layout_height="@dimen/space_18"
+            android:gravity="fill_vertical"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="@dimen/space_2" />
 
-        <ui.CustomtextView
-            font:name="GOTHAM_BLACK"
-            font:type = "bold"
-            android:id="@+id/textView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@drawable/shape_nav_menu_selector"
-            android:textSize="@dimen/space_14"
-            android:layout_toLeftOf="@+id/imageView10"
-            android:layout_toRightOf="@+id/item_nav_menu_icon_image_view"
-            android:layout_toEndOf="@+id/item_nav_menu_icon_image_view"
-            android:layout_marginRight="@dimen/space_30"
-            android:layout_marginLeft="@dimen/space_5"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:text="KJH asdasd ASAS"
-            android:gravity="fill_vertical" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="@dimen/space_25"
-            android:layout_height="@dimen/space_25"
-            android:id="@+id/imageView10"
-            android:layout_alignTop="@+id/item_nav_menu_icon_image_view"
-            android:gravity="fill_horizontal"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
 
-</RelativeLayout>
+            <ui.CustomtextView
+                font:name="GOTHAM_BLACK"
+                android:id="@+id/textView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@drawable/shape_nav_menu_selector"
+                android:textSize="@dimen/space_16"
+
+                android:layout_marginLeft="@dimen/space_5"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:text="KJH asdasd ASAS"
+                android:gravity="fill_vertical"
+                android:layout_toLeftOf="@+id/imageView10"
+                android:layout_toStartOf="@+id/imageView10" />
+
+            <ImageView
+                android:layout_width="@dimen/space_18"
+                android:layout_height="@dimen/space_18"
+                android:id="@+id/imageView10"
+                android:gravity="fill_vertical"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/space_2" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
