--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -9,7 +9,10 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ui.CircleImageView
             android:id="@+id/imageView7"
@@ -25,7 +28,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -34,7 +38,6 @@
 
                 <ui.CustomtextView
                     font:name="GOTHAM_BLACK"
-                    font:type ="bold"
                     android:id="@+id/text_Name"
                     android:textColor="@color/blu3"
                     android:text="Bpk Budi"
@@ -66,31 +69,39 @@
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHT"
                     android:id="@+id/lbl_attach1"
+                    android:textSize="@dimen/space_12"
                     android:text="Attachments :"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:textStyle="italic"
+                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginLeft="@dimen/space_7"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
 
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHT"
                     android:id="@+id/lbl_attach"
+                    android:textSize="@dimen/space_12"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="italic"
                     android:maxLines="1"
+                    android:layout_marginTop="-3dp"
+                    android:layout_marginLeft="@dimen/space_5"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginTop="@dimen/space_3" />
+                    android:layout_toEndOf="@+id/imageView6" />
 
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHT"
                     android:id="@+id/lbl_size"
+                    android:textSize="@dimen/space_12"
+                    android:layout_marginLeft="@dimen/space_5"
                     android:text="Attachemnt asdas asdas asd asd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -99,17 +110,20 @@
                     android:layout_below="@+id/lbl_attach"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginTop="@dimen/space_2" />
+                    android:layout_marginTop="@dimen/space_2"
+                    android:layout_marginBottom="@dimen/space_3"/>
 
                 <ImageView
-                    android:layout_width="@dimen/space_40"
-                    android:layout_height="@dimen/space_40"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
                     android:id="@+id/imageView6"
                     android:layout_below="@+id/lbl_attach1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/pdf"
-                    android:layout_marginBottom="@dimen/space_5" />
+                    android:layout_marginTop="@dimen/space_7"
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_marginBottom="@dimen/space_7"
+                    android:src="@drawable/pdf" />
 
 
             </RelativeLayout>
