--- a/app/src/main/res/layout/row_disposisi_permohonan.xml
+++ b/app/src/main/res/layout/row_disposisi_permohonan.xml
@@ -70,15 +70,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:layout_marginTop="-2dp"
+                    android:textSize="@dimen/space_12"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginRight="@dimen/space_45" />
+                    android:layout_marginRight="@dimen/space_45"
+                    android:layout_marginLeft="@dimen/space_3" />
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
+                    android:textSize="@dimen/space_12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
@@ -90,15 +94,16 @@
                     android:textStyle="italic" />
 
                 <ImageView
-                    android:layout_width="@dimen/space_40"
-                    android:layout_height="@dimen/space_40"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25"
                     android:id="@+id/imageView6"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:src="@drawable/pdf"
-                    android:layout_marginTop="@dimen/space_5"
-                    android:layout_marginBottom="@dimen/space_5" />
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_marginBottom="@dimen/space_10" />
 
                 <ImageView
                     android:visibility="gone"
