--- a/app/src/main/res/layout/row_disposisi_riwayat_dalamproses.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat_dalamproses.xml
@@ -44,7 +44,7 @@
             <RelativeLayout
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_40"
+                android:layout_height="wrap_content"
                 android:background="@color/colorListItem"
                 android:layout_below="@+id/text_Date"
                 android:layout_alignRight="@+id/text_time"
@@ -55,16 +55,19 @@
 
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHT"
+                    android:textSize="@dimen/space_12"
+                    android:textStyle="italic"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginTop="@dimen/space_7"
                     android:layout_marginLeft="@dimen/space_5"
                     android:maxLines="1" />
 
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHT"
+                    android:textSize="@dimen/space_12"
                     android:textStyle="italic"
                     android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
@@ -74,27 +77,52 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:maxLines="1"
+                    android:layout_marginBottom="@dimen/space_7"
                     android:layout_marginLeft="@dimen/space_5"/>
 
 
             </RelativeLayout>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/btnDownload"
+                android:layout_toStartOf="@+id/btnDownload"
+                android:layout_alignParentBottom="true"
+                android:layout_alignTop="@+id/btnDownload">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:src="@drawable/ball_green"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_30" />
+
+                <ui.CustomtextView
+                    font:name = "GOTHAM_MEDIUM"
+                    android:text="disetujui"
+                    android:id="@+id/text_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/space_30"
+                    android:gravity="fill_vertical" />
+            </LinearLayout>
+
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
                 android:layout_width="115dp"
-                android:layout_height="@dimen/space_35"
+                android:layout_height="@dimen/space_30"
                 android:background="@drawable/btn_shape_all_blue"
                 android:gravity="center"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="@dimen/space_5"
-                android:layout_marginRight="@dimen/space_10" >
+
+                android:layout_below="@+id/layout_attachment"
+                android:layout_alignRight="@+id/layout_attachment"
+                android:layout_alignEnd="@+id/layout_attachment"
+                android:layout_marginTop="@dimen/space_3">
                 <ImageView
                     android:src="@drawable/downloadsave32"
                     android:layout_width="@dimen/space_25"
@@ -114,30 +142,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
             </RelativeLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/btnDownload"
-                android:layout_toStartOf="@+id/btnDownload"
-                android:layout_alignParentBottom="true"
-                android:layout_alignTop="@+id/btnDownload">
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:src="@drawable/ball_green"
-                    android:layout_width="@dimen/space_25"
-                    android:layout_height="match_parent" />
-
-                <ui.CustomtextView
-                    font:name = "GOTHAM_MEDIUM"
-                    android:text="disetujui"
-                    android:id="@+id/text_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="fill_vertical" />
-            </LinearLayout>
 
         </RelativeLayout>
 
